--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@ body {
 }
 .parameters {
 	font-size : 12px;
+	text-align: left;
+	padding-top: 50px;
+	padding-left: 20px;
 	width: 30%;
-	background: #FFFFFF;
+	background: #CCCCCC;
 	position: fixed;
 	top: 0;
 	right: 0;
-	border: 0;
 }
 
 .page {
